test_suite/tests/ui/transparent/with_into.stderr
error: #[serde(transparent)] is not allowed with #[serde(into = "...")]
 --> $DIR/with_into.rs:5:1
  |
5 | / #[serde(transparent, into = "u64")]
6 | | struct S {
7 | |     a: u8,
8 | | }
  | |_^

error: aborting due to previous error

